--- a/src/sortings/SortingsView.fxml
+++ b/src/sortings/SortingsView.fxml
@@ -23,6 +23,6 @@
       <TextArea fx:id="textArea" layoutX="93.0" layoutY="128.0" prefHeight="200.0" prefWidth="392.0" />
       <Label fx:id="sliderValue" layoutX="272.0" layoutY="355.0" text="Label" />
       <Button fx:id="resetButton" layoutX="404.0" layoutY="329.0" mnemonicParsing="false" onMouseClicked="#resetBtn_Click" text="Reset" />
-      <Button layoutX="485.0" layoutY="329.0" mnemonicParsing="false" text="Sort" />
+      <Button fx:id="sortButton" layoutX="485.0" layoutY="329.0" mnemonicParsing="false" text="Sort" />
    </children>
 </AnchorPane>
